# funky-math-problem-solver

./: .gitignore  .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  LICENSE  README.md  configure  configure.sh  gen_version.sh
data/: PROGRAM_DESCRIPTION  VERSION_TEMPLATE  VERSION_TEMPLATE_DEV
inc/: Info.h  Rule.h  Solver.h
src/: CMakeLists.txt  Info.cpp  Rule.cpp  Solver.cpp  data.S  main.cpp
test/unit/: CMakeLists.txt  test_Info.cpp
